升级SpringBoot版本并优化代码- 将SpringBoot版本从2.6.2升级到3.3.4 - 更新Java版本至23 - 优化代码风格，使用var关键字简化局部变量类型声明 - 在application.yml中添加配置允许循环引用 -重构部分测试代码